--- a/README
+++ b/README
@@ -2,12 +2,15 @@ This is firmware pack/unpack utility for jboot-based routers.
 You also need squashfs and unsquashfs (you can get it from firmware-mod-kit) of corresponding versions.
 
 OpenSource replacement for binboy from SDK found in:
+D-Link DWR-521 Rev.B
 D-Link DWR-921
+Zyxel LTE 3301
+Zyxel LTE 3311
 Lava Telecom LR-25G001
 
 
 Now only sanity check (with all CRC calculations) and header display finished.
 ./openbinboy [-c] -i input.bin
 
-  -c      Use old style jboot CRC for some calculations (DWA-921 and others), if you see CRC mismatches, try this
+  -c      Use old style jboot CRC for some calculations (DWR-921 and others), if you see CRC mismatches, try this option
   -i      Print headers and do sanity check on whole firmware or single container
