--- a/README
+++ b/README
@@ -13,7 +13,7 @@ Now only static kernel/bootloader offsets supported (see in code)
 ./openbinboy [-c] [-e] < -i input.bin | -x input.bin >
 
   -c      Use old style jboot CRC for some calculations (DWR-921 and others), if you see CRC mismatches, try this option
-  -e      Use big endian for all calculations
+  -e      Use big endian for all calculations (all except Zyxel LTE3301-Q222)
   -i      Print headers and do sanity check on whole firmware or single container
   -x      Extract files from whole firmware to bootloader.bin + kernel.bin + rootfs.bin + branding.bin
   -t      Use specified unixtime for inclusion to image header
@@ -21,6 +21,6 @@ Now only static kernel/bootloader offsets supported (see in code)
   -n      Assemble whole firmware { -n [-c] [-e] [-t unixtime ] -k kernel.bin -r rootfs.bin [-u bootloader.bin] [-b branding.bin ] -o output.bin }
 
 NOTES:
-1. Bootloader is not necessary
+1. Bootloader (and often branding) is not necessary
 2. Branding partition optionally contain branding header (can be created with -h option)
 3. All partitions seen in such firmwares is "Squashfs filesystem, little endian, version 4.0, compression:gzip"
